Add browser elements
Added browser elements to enable the game to be played by clicking in
the browser.  Created buttons for new game and reset game.  The control
buttons are hidden when not required.  The game board is locked until a
new game is started.

Need to add forms for entering player names and selecting a token.
Console messages regarding game state, winner and invalid moves also
need to be displayed in the browser

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <title>Tick Tac Toe</title>
 </head>
 <body>
-
+  <header>Tic Tac Toe</header>
+  <main>
+    <div id="player1" class="player">Player 1</div>
+    <div id="game">
+      <div id="board"></div>
+      <div id="message">Messages</div>
+      <div id="controls"></div>
+    </div>
+    <div id="player2" class="player">Player 2</div>
+  </main>
   <script src="./script.js"></script>
 <body>
 </html>
