Fully playable browser game
Removed call to showNextTurn function that toggled the active player
visual when resetting the game, and replaced it with a command to set
classes directly.

Game is now fully playable in the browser window, but needs styling

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header><h1>Tic Tac Toe</h1></header>
   <main>
-    <div id="player1" class="player turn">
+    <div id="player1" class="player">
       <h2>Player 1</h2>
       <form action="" id="p1Details">
         <label for="p1Name">Name</label>
@@ -20,7 +20,7 @@
     </div>
     <div id="game">
       <div id="board"></div>
-      <div id="message">Messages</div>
+      <div id="message"></div>
       <div id="controls"></div>
     </div>
     <div id="player2" class="player">
